Update fastboot screenshots and fix text color in dark mode

--- a/pages/_sass/_elements.scss
+++ b/pages/_sass/_elements.scss
@@ -47,6 +47,9 @@ i.icon {
      flex-grow: 1;
      margin: var(--spacing-base);
      text-align: center;
+     @media (prefers-color-scheme: dark) {
+       color: var(--font-color-light);
+     }
      img {
        display: block;
        margin: 0.25rem auto;
